--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "projectname"
-version = "1.0.0"
+name = "rust"
+version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-# example = "1.0.0"
